--- a/requirements.txt
+++ b/requirements.txt
@@ -39,3 +39,10 @@ typed-ast==1.4.2
 typing-extensions==3.7.4.3
 urllib3==1.26.3
 gunicorn==20.1.0
+djangorestframework
+markdown
+django-filter
+PyYAML
+uritemplate
+Pygments
+django-guardian 
