--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,59 @@
 appdirs==1.4.4
-asgiref==3.3.1
-atomicwrites==1.4.0
-attrs==20.3.0
-black==20.8b1
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
+asgiref==3.2.10
+astroid==2.4.2
+autopep8==1.5.4
+boto3==1.14.31
+botocore==1.17.31
+cachelib==0.1
+certifi==2020.4.5.1
+chardet==3.0.4
 click==7.1.2
 colorama==0.4.4
-coverage==5.4
-cryptography==3.4.6
-Django==3.2
+cs50==5.0.4
+distlib==0.3.1
+Django==3.1.4
+django-ckeditor==5.9.0
+django-cors-headers==3.5.0
+django-crispy-forms==1.9.2
+django-filter==2.3.0
 django-js-asset==1.2.2
-django-mptt==0.11.0
-idna==2.10
-iniconfig==1.1.1
-isort==5.7.0
-mypy-extensions==0.4.3
-packaging==20.9
-pathspec==0.8.1
-paypal-checkout-serversdk==1.0.1
-paypalhttp==1.0.0
-Pillow==8.1.0
-pluggy==0.13.1
-py==1.10.0
-pycparser==2.20
-pyOpenSSL==20.0.1
-pyparsing==2.4.7
-pytest==6.2.3
-pytest-django==4.1.0
-pytz==2021.1
-regex==2020.11.13
-requests==2.25.1
+django-storages==1.9.1
+djangorestframework==3.11.1
+djangorestframework-simplejwt==4.4.0
+docutils==0.15.2
+filelock==3.0.12
+Flask==1.1.2
+Flask-Session==0.3.2
+gunicorn==20.0.4
+idna==2.9
+install==1.3.3
+isort==5.6.4
+itsdangerous==1.1.0
+Jinja2==2.11.2
+jmespath==0.10.0
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+Pillow==8.0.1
+psycopg2==2.8.5
+pycodestyle==2.6.0
+PyJWT==1.7.1
+pylint==2.6.0
+python-dateutil==2.8.1
+python-dotenv==0.13.0
+pytz==2020.1
+requests==2.23.0
+s3transfer==0.3.3
 six==1.15.0
-sqlparse==0.4.1
+SQLAlchemy==1.3.17
+sqlparse==0.3.1
+termcolor==1.1.0
 toml==0.10.2
-typed-ast==1.4.2
-typing-extensions==3.7.4.3
-urllib3==1.26.3
-gunicorn==20.1.0
+urllib3==1.25.9
+virtualenv==20.2.1
+Werkzeug==0.15.4
+whitenoise==5.1.0
+wrapt==1.12.1
 djangorestframework
 markdown
 django-filter
